--- a/style.css
+++ b/style.css
@@ -1,4 +1,36 @@
-html {
-  height: 100%;
-  width: 100%;
+body{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+}
+
+header{
+  background-color: #85e0c6;
+}
+
+nav{
+  background-color: #7ae861;
+}
+
+main{
+  background-color: #FFFFFF;
+  font-size: 110%;
+}
+
+footer{
+  background-color: #43d6b9;
+}
+
+li{
+  display: inline-block;
+  width: 120px;
+}
+
+h1{
+  text-align: left;
+  font-family: 'Courier New', Courier, monospace;
+  color: #ba22dd;
+}
+
+p{
+  line-height: 110%;
 }
