--- a/style.css
+++ b/style.css
@@ -5,24 +5,55 @@ body {
 nav {
   display: flex;
   flex-wrap: nowrap;
+  justify-content: space-around;
   grid-template-columns: 25% 25% 25%;
   background-color: lightgray;
   text-align: center;
-  justify-content: space-around;
   border: 2px solid black;
   padding: 10px;
 }
-a[href*="#stmc"]{color: #FFFFFF; position: relative; top: -30px; left: 0px; font-size: 14px;}
-a[href*="#stmc"]:focus{position: relative; top: 0px; left: 0px; color: #FFFFFF;}
-nav>a {
+a[href*="#stmc"]{
+  color: #FFFFFF;
+  position: relative;
+  top: -30px;
+  left: 0px;
+  font-size: 14px;
+}
+
+a[href*="#stmc"]:focus{
+  position: relative;
+  top: 0px;
+  left: 0px;
+  color: #FFFFFF;
+}
+
+nav > a {
   color: black;
   font-family: Helvetica, sans-serif;
   font-size: 25px;
   text-decoration: none;
 }
-h1{color: floralwhite; font-family: Helvetica; font-size: 30px; transition-property: color; transition-duration: 2s; transition-timing-function: ease-in-out; transition-delay: 0s;}
+
+h1{
+  color: floralwhite;
+  font-family: Helvetica;
+  font-size: 30px;
+  transition-property: color;
+  transition-duration: 2s;
+  transition-timing-function: ease-in-out;
+  transition-delay: 0s;
+}
+
 @keyframes race{0%{color: floralwhite;}50%{color: red}100%{color: green}}
-h1:hover{animation-name: race; animation-duration: 4s; animation-timing-function: ease-in-out; animation-delay: 0s; animation-iteration-count: infinite; animation-direction: alternate;}
+
+h1:hover{
+  animation-name: race;
+  animation-duration: 4s;
+  animation-timing-function: ease-in-out;
+  animation-delay: 0s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
 
 
 .container {
@@ -43,6 +74,40 @@ h1:hover{animation-name: race; animation-duration: 4s; animation-timing-function
   font-size: 25px;
   text-align: center;
 }
-.imgcontainer{display: grid; grid-template-columns: auto auto auto;}
-.imgcontainer > img{border: 2px solid blue; padding: 2px; border-radius: 5px; width: 400px; height: 400px;}
-.imgcontainer > img:nth-child(2n+1){border: 2px solid green; border-width: 4px;}
+
+.imgcontainer{
+  display: grid;
+  grid-template-columns: auto auto auto;
+}
+
+.imgcontainer > img{
+  border: 2px solid blue;
+  padding: 2px;
+  border-radius: 5px;
+  width: 400px;
+  height: 400px;
+  transition-property: color padding;
+  transition-duration: 2s 2s;
+  transition-timing-function: ease-in-out;
+  transition-delay: 0s;
+}
+
+@keyframes images{0%{
+  color: yellow;
+  border: 3px solid
+}50%{
+  color: red;
+  border: 4px solid;
+}100%{
+  color: green;
+  border: 5px solid;
+}}
+
+.imgcontainer > img:nth-child(2n+1){
+  animation-name: images;
+  animation-duration: 4s;
+  animation-timing-function: ease-in-out;
+  animation-delay: 0s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
